P4ADEV-4897-expose-send-timeline: refactoring and renaming
